--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Ghost Server</title>
 </head>
-<body>
-    
+<body class="bg-gray-900 text-gray-100 font-sans">
+
+    <!-- Hero Section -->
+    <section class="bg-gradient-to-r from-indigo-600 to-purple-600 py-20">
+        <div class="container mx-auto text-center px-4">
+            <img src="../Electron/Assets/100ppi/Logo 2.png" alt="Ghost Server Logo" class="mx-auto w-40 rounded-full mb-6">
+            <h1 class="text-4xl md:text-6xl font-bold mb-4">Ghost Server</h1>
+            <p class="text-lg md:text-2xl mb-6">Web Server Lokal alternatif XAMPP/Laragon untuk PHP, Laravel, CodeIgniter, dan Static HTML</p>
+            <a href="#features" class="bg-white text-indigo-600 font-semibold px-6 py-3 rounded-full hover:bg-gray-200 transition">Lihat Fitur</a>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="py-20">
+        <div class="container mx-auto px-4 text-center">
+            <h2 class="text-3xl font-bold mb-12">Fitur Utama</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-gray-800 p-6 rounded-lg hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold mb-2">PHP & Laravel</h3>
+                    <p>Jalankan semua project PHP, Laravel, CodeIgniter dengan mudah di localhost.</p>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-lg hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold mb-2">Electron GUI</h3>
+                    <p>Mudah dijalankan lewat GUI, tanpa ribet pakai terminal.</p>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-lg hover:shadow-lg transition">
+                    <h3 class="text-xl font-semibold mb-2">SSL Lokal</h3>
+                    <p>Support HTTPS dengan self-signed certificate untuk pengembangan lokal.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="bg-indigo-600 py-16">
+        <div class="container mx-auto text-center px-4">
+            <h2 class="text-3xl font-bold mb-4">Siap Mencoba Ghost Server?</h2>
+            <p class="mb-6">Download sekarang dan jalankan server lokal kamu dalam hitungan detik!</p>
+            <a href="#" class="bg-white text-indigo-600 font-semibold px-8 py-4 rounded-full hover:bg-gray-200 transition">Download Sekarang</a>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-gray-800 py-6 text-center">
+        <p>&copy; 2025 Ghost Server. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
