--- a/Electron/Renderer/index.html
+++ b/Electron/Renderer/index.html
@@ -3,10 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../src/output.css"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Ghost Server</title>
 </head>
-<body>
-    
+<body class="bg-gray-100 flex flex-col h-screen">
+
+    <!-- Header -->
+    <header class="flex items-center justify-between p-4 bg-white shadow-md md:hidden">
+        <div class="flex items-center">
+            <img src="../Assets/100ppi/Logo 2.png" alt="Logo" class="h-8 w-auto">
+            <span class="ml-2 text-xl font-semibold text-gray-800">Ghost Server</span>
+        </div>
+        <button id="menu-button" class="text-gray-500 hover:text-gray-600 focus:outline-none">
+            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
+            </svg>
+        </button>
+    </header>
+
+    <div class="flex flex-1 overflow-hidden">
+        <!-- Sidebar -->
+        <aside id="sidebar" class="fixed md:relative z-50 inset-y-0 left-0 w-64 bg-white shadow-lg transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
+            <div class="p-4 border-b hidden md:flex items-center">
+                <img src="../Assets/100ppi/Logo 2.png" alt="Logo" class="h-8 w-auto">
+                <span class="ml-2 text-xl font-semibold text-gray-800">Ghost Server</span>
+            </div>
+            <nav class="mt-5 px-2 flex flex-col space-y-1">
+                <a href="#" class="group flex items-center px-3 py-2 text-base font-medium rounded-lg bg-indigo-100 text-indigo-700">
+                    <img src="../fontawesome-free-7.0.0-desktop/svgs-full/regular/home.svg" alt="" class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500">
+                    Dashboard
+                </a>
+                <a href="#" class="group flex items-center px-3 py-2 text-base font-medium rounded-lg text-gray-600 hover:bg-gray-50 hover:text-gray-900">
+                    <img src="../fontawesome-free-7.0.0-desktop/svgs-full/regular/folder.svg" alt="" class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500">
+                    Projects
+                </a>
+                <a href="#" class="group flex items-center px-3 py-2 text-base font-medium rounded-lg text-gray-600 hover:bg-gray-50 hover:text-gray-900">
+                    <img src="../fontawesome-free-7.0.0-desktop/svgs-full/solid/gear.svg" alt="" class="mr-3 h-6 w-6 text-gray-400 group-hover:text-gray-500">
+                    Setting
+                </a>
+                <!-- Tambahkan menu lainnya sama seperti di atas -->
+            </nav>
+        </aside>
+
+        <!-- Backdrop overlay untuk mobile -->
+        <div id="overlay" class="fixed inset-0 bg-black bg-opacity-30 hidden z-40 md:hidden"></div>
+
+        <!-- Main Content -->
+        <main class="flex-1 p-6 overflow-y-auto">
+            <h1 class="text-3xl font-bold text-gray-900 mb-4">Dashboard</h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                    <h2 class="text-lg font-semibold text-gray-700">Server Status</h2>
+                    <p class="text-gray-500 mt-2">Semua server berjalan normal.</p>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                    <h2 class="text-lg font-semibold text-gray-700">Active Users</h2>
+                    <p class="text-gray-500 mt-2">120 Users sedang online.</p>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow hover:shadow-lg transition">
+                    <h2 class="text-lg font-semibold text-gray-700">Projects</h2>
+                    <p class="text-gray-500 mt-2">5 proyek aktif saat ini.</p>
+                </div>
+            </div>
+        </main>
+    </div>
+
+    <script>
+        const menuButton = document.getElementById('menu-button');
+        const sidebar = document.getElementById('sidebar');
+        const overlay = document.getElementById('overlay');
+
+        menuButton.addEventListener('click', () => {
+            sidebar.classList.toggle('-translate-x-full');
+            overlay.classList.toggle('hidden');
+        });
+
+        overlay.addEventListener('click', () => {
+            sidebar.classList.add('-translate-x-full');
+            overlay.classList.add('hidden');
+        });
+    </script>
 </body>
 </html>
